--- a/app/design/frontend/default/default/template/maxima/bankslip/itau.phtml
+++ b/app/design/frontend/default/default/template/maxima/bankslip/itau.phtml
@@ -331,8 +331,8 @@ function geraCodigoBanco($numero) {
 <!--.cn { FONT: 9px Arial; COLOR: black }
 <!--.bc { font: bold 20px Arial; color: #000000 }
 <!--.ld2 { font: bold 12px Arial; color: #000000 }
---></style>
-
+-->
+</style>
 
 <table width=666 cellspacing=0 cellpadding=0 border=0><tr><td valign=top class=cp><DIV ALIGN="CENTER">Instruções
 de Impressão</DIV></TD></TR><TR><TD valign=top class=cp><DIV ALIGN="left">
@@ -350,7 +350,7 @@ de Impressão</DIV></TD></TR><TR><TD valign=top class=cp><DIV ALIGN="left">
 do Sacado</b></div></TD></tr></tbody></table><table width=666 cellspacing=5 cellpadding=0 border=0><tr><td width=41></TD></tr></table>
 <table width=666 cellspacing=5 cellpadding=0 border=0 align=Default>
   <tr>
-    <td width=41><IMG SRC="imagens/logo_empresa.png"></td>
+    <td width=41><IMG SRC="<?php echo $this->getSkinUrl('images/logo.png'); ?>"></td>
     <td class=ti width=455><?php echo $dadosboleto["identificacao"]; ?> <?php echo isset($dadosboleto["cpf_cnpj"]) ? "<br>".$dadosboleto["cpf_cnpj"] : '' ?><br>
 	<?php echo $dadosboleto["endereco"]; ?><br>
 	<?php echo $dadosboleto["cidade_uf"]; ?><br>
@@ -422,14 +422,13 @@ mecânica</td></tr><tr><td  width=7 ></td><td class=cp width=564 >
 <span class="campo">
   <?php echo $dadosboleto["demonstrativo1"]?><br>
   <?php echo $dadosboleto["demonstrativo2"]?><br>
-  <?php echo $dadosboleto["demonstrativo3"]?><br>
   </span>
   </td><td  width=7 ></td><td  width=88 ></td></tr></tbody></table><table cellspacing=0 cellpadding=0 width=666 border=0><tbody><tr><td width=7></td><td  width=500 class=cp>
 <br><br><br>
 </td><td width=159></td></tr></tbody></table><table cellspacing=0 cellpadding=0 width=666 border=0><tr><td class=ct width=666></td></tr><tbody><tr><td class=ct width=666>
 <div align=right>Corte na linha pontilhada</div></td></tr><tr><td class=ct width=666><img height=1 src=<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/6.png width=665 border=0></td></tr></tbody></table><br><table cellspacing=0 cellpadding=0 width=666 border=0><tr><td class=cp width=150>
   <span class="campo"><IMG
-      src="imagens/logoitau.jpg" width="150" height="40"
+      src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/itau.jpg" width="150" height="40"
       border=0></span></td>
 <td width=3 valign=bottom><img height=22 src=<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/3.png width=2 border=0></td><td class=cpt width=58 valign=bottom><div align=center><font class=bc><?php echo $dadosboleto["codigo_banco_com_dv"]?></font></div></td><td width=3 valign=bottom><img height=22 src=<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/3.png width=2 border=0></td><td class=ld align=right width=453 valign=bottom><span class=ld>
 <span class="campotitulo">
