--- a/app/design/frontend/default/default/template/maxima/bankslip/itau.phtml
+++ b/app/design/frontend/default/default/template/maxima/bankslip/itau.phtml
@@ -537,13 +537,13 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 53px;">
 				Quantidade
 			</td>
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 120px;">
 				Nosso Número
 			</td>
 		</tr>
@@ -610,7 +610,7 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 181px;">
 				Valor Documento
 			</td>
 		</tr>
@@ -677,7 +677,7 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 181px;">
 				(=) Valor cobrado
 			</td>
 		</tr>
@@ -822,7 +822,7 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 181px;">
 				Vencimento
 			</td>
 		</tr>
@@ -859,7 +859,7 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 181px;">
 				Agência / Código cedente
 			</td>
 		</tr>
@@ -920,7 +920,7 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 181px;">
 				Nosso número
 			</td>
 		</tr>
@@ -1005,7 +1005,7 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 181px;">
 				(=) Valor documento
 			</td>
 		</tr>
@@ -1066,7 +1066,7 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 182px;">
 				(-) Desconto / Abatimentos
 			</td>
 		</tr>
@@ -1090,7 +1090,7 @@ function geraCodigoBanco($numero) {
 <table class="container-row" cellpadding="0" cellspacing="0" border="0">
 	<tbody>
 		<tr class="tiny-font">
-			<td valign="top" align="left" style="width: 484px;">
+			<td valign="top" align="left" style="width: 478px;">
 				<table cellpadding="0" cellspacing="0" border="0">
 					<tbody>
 						<tr class="tiny-font">
@@ -1110,7 +1110,7 @@ function geraCodigoBanco($numero) {
 					</tbody>
 				</table>
 			</td>
-			<td valign="top" align="left">
+			<td valign="top" align="left" style="width: 188px;">
 				<table cellpadding="0" cellspacing="0" border="0" style="width: 100%;">
 					<tbody>
 						<tr>
@@ -1212,7 +1212,7 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td class="tiny-font" valign="top" align="left">
+			<td class="tiny-font" valign="top" align="left" style="width: 181px;">
 				Cód. baixa
 			</td>
 		</tr>
