--- a/app/design/frontend/default/default/template/maxima/bankslip/itau.phtml
+++ b/app/design/frontend/default/default/template/maxima/bankslip/itau.phtml
@@ -324,14 +324,6 @@ function geraCodigoBanco($numero) {
 ?>
 
 <style type="text/css">
-	.cp {  font: bold 10px Arial; color: black}
-	.ti {  font: 9px Arial, Helvetica, sans-serif}
-	.ld { font: bold 15px Arial; color: #000000}
-	.ct { font: 9px "Arial Narrow"; color: #000033}
-	.cn { font: 9px Arial; color: black }
-	.bc { font: bold 20px Arial; color: #000000 }
-	.ld2 { font: bold 12px Arial; color: #000000 }
-	
 	
 	/* textos e imagens */
 	.instructions
@@ -1060,13 +1052,13 @@ function geraCodigoBanco($numero) {
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left" style="width: 475px;">
+			<td valign="top" align="left">
 				Instruções (Texto de responsabilidade do cedente)
 			</td>
 			<td valign="top" align="left" style="width: 8px;">
 				<img alt="" class="small-vertical-separator" src="<?php echo Mage::getBaseUrl(Mage_Core_Model_Store::URL_TYPE_WEB); ?>skin/frontend/default/default/images/maxima/bankslip/1.png" />
 			</td>
-			<td valign="top" align="left" style="width: 182px;">
+			<td valign="top" align="left" style="width: 181px;">
 				(-) Desconto / Abatimentos
 			</td>
 		</tr>
