--- a/app/design/adminhtml/default/default/template/maxima/bankslip/view.phtml
+++ b/app/design/adminhtml/default/default/template/maxima/bankslip/view.phtml
@@ -50,6 +50,10 @@
 		</div>
 	</div>
 	
+<?php
+	if(count($returnFileInfo) > 0)
+	{
+?>
 	<div class="box-right">
 		<!-- Return File Information-->
 		<div class="entry-edit">
@@ -74,3 +78,6 @@
 			</div>
 		</div>
 	</div>
+<?php
+	}
+?>
