--- a/app/design/frontend/default/default/layout/maxima_bankslip.xml
+++ b/app/design/frontend/default/default/layout/maxima_bankslip.xml
@@ -3,7 +3,7 @@
 <layout>
 
 	<!-- Finalizacao da compra -->
-	<maxima_bankslip_index_success translate="label">
+	<maxima_bankslip_index_success module="Maxima_BankSlip" translate="label">
 		<label>Payment Success - Bank Slip</label>
 		<reference name="root">
 			<action method="setTemplate"><template>page/2columns-right.phtml</template></action>
@@ -14,7 +14,7 @@
 	</maxima_bankslip_index_success>
 	
 	<!-- Popup que renderiza o boleto bancario -->
-	<maxima_bankslip_index_view translate="label">
+	<maxima_bankslip_index_view module="Maxima_BankSlip" translate="label">
 		<reference name="root">
 			<action method="setTemplate"><template>maxima/bankslip/popup.phtml</template></action>
 		</reference>
